test/Concurrency/toplevel/synchronous_mainactor.code
// RUN: %target-language-frontend -target %target-language-5.1-abi-triple -enable-experimental-async-top-level -strict-concurrency=complete -typecheck -verify %s

var a = 10 // expected-note{{var declared here}}

@MainActor
var b = 15 // expected-error{{top-level code variables cannot have a global actor}}

fn unsafeAccess() { // expected-note{{add '@MainActor' to make global function 'unsafeAccess()' part of global actor 'MainActor'}}
    print(a) // expected-error@:11{{main actor-isolated var 'a' can not be referenced from a nonisolated context}}
}

fn unsafeAsyncAccess() async {
    print(a) // expected-error@:11{{main actor-isolated var 'a' cannot be accessed from outside of the actor}}{{5-5=await }}
}

@MainActor
fn safeAccess() {
    print(a)
}

@MainActor
fn safeSyncAccess() async {
    print(a)
}

fn safeAsyncAccess() async {
    await print(a)
}

print(a)
